# liblpm

./: .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  TODO.md
benchmarks/: CMakeLists.txt  bench_algorithm_scaling.c  bench_comparison.c  bench_lookup.c  bench_lookup_all.c
benchmarks/data/: .gitignore
benchmarks/data/algorithm_comparison/: .gitkeep
benchmarks/data/algorithm_comparison/amd_epyc_7301_16_core_ipv4_batch/: dpdk.csv
benchmarks/data/algorithm_comparison/amd_epyc_7301_16_core_ipv6_single/: dpdk6.csv  rmindlpm6.csv
benchmarks/data/algorithm_comparison/amd_epyc_7452_32_core_ipv4_batch/: dpdk.csv
benchmarks/data/algorithm_comparison/amd_epyc_7452_32_core_ipv4_single/: dir24.csv  rmindlpm.csv
benchmarks/data/algorithm_comparison/amd_epyc_7452_32_core_ipv6_batch/: dpdk6.csv
benchmarks/data/algorithm_comparison/amd_epyc_7452_32_core_ipv6_single/: 6stride8.csv  dpdk6.csv  rmindlpm6.csv  wide16.csv
benchmarks/data/algorithm_comparison/amd_ryzen_9_9950x3d_16_core_ipv4_batch/: 4stride8.csv  dir24.csv  patricia.csv  rmindlpm.csv
benchmarks/data/algorithm_comparison/amd_ryzen_9_9950x3d_16_core_ipv4_single/: 4stride8.csv  dir24.csv  dpdk.csv
benchmarks/data/algorithm_comparison/amd_ryzen_9_9950x3d_16_core_ipv6_batch/: 6stride8.csv  dpdk6.csv  rmindlpm6.csv
benchmarks/data/algorithm_comparison/amd_ryzen_9_9950x3d_16_core_ipv6_single/: 6stride8.csv  wide16.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_e3_1220_v3_ipv4_batch/: dpdk.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_e3_1220_v3_ipv4_single/: 4stride8.csv  patricia.csv  rmindlpm.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_e3_1220_v3_ipv6_single/: 6stride8.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_e5_2683_v4_ipv4_batch/: 4stride8.csv  rmindlpm.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_e5_2683_v4_ipv4_single/: 4stride8.csv  dir24.csv  rmindlpm.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_e5_2683_v4_ipv6_batch/: 6stride8.csv  dpdk6.csv  wide16.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_e5_2683_v4_ipv6_single/: 6stride8.csv  wide16.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_x5650_ipv4_batch/: dpdk.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_x5650_ipv4_single/: dir24.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_cpu_x5650_ipv6_single/: 6stride8.csv  dpdk6.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_gold_6426y_ipv4_batch/: patricia.csv  rmindlpm.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_gold_6426y_ipv4_single/: 4stride8.csv  dir24.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_gold_6426y_ipv6_batch/: rmindlpm6.csv  wide16.csv
benchmarks/data/algorithm_comparison/intelr_xeonr_gold_6426y_ipv6_single/: rmindlpm6.csv  wide16.csv
benchmarks/data/cpu_comparison/4stride8_ipv4_batch/: amd_ryzen_9_9950x3d_16_core.csv  intelr_xeonr_cpu_e5_2683_v4.csv  intelr_xeonr_gold_6426y.csv
benchmarks/data/cpu_comparison/4stride8_ipv4_single/: amd_epyc_7301_16_core.csv  amd_epyc_7452_32_core.csv  amd_ryzen_9_9950x3d_16_core.csv  intelr_xeonr_cpu_e5_2683_v4.csv  intelr_xeonr_cpu_x5650.csv
benchmarks/data/cpu_comparison/6stride8_ipv6_batch/: amd_ryzen_9_9950x3d_16_core.csv  intelr_xeonr_cpu_e5_2683_v4.csv  intelr_xeonr_gold_6426y.csv
benchmarks/data/cpu_comparison/6stride8_ipv6_single/: amd_epyc_7301_16_core.csv  amd_ryzen_9_9950x3d_16_core.csv  intelr_xeonr_cpu_e5_2683_v4.csv  intelr_xeonr_gold_6426y.csv
benchmarks/data/cpu_comparison/dir24_ipv4_batch/: amd_ryzen_9_9950x3d_16_core.csv  intelr_xeonr_cpu_e5_2683_v4.csv  intelr_xeonr_gold_6426y.csv
benchmarks/data/cpu_comparison/dir24_ipv4_single/: amd_epyc_7301_16_core.csv  amd_ryzen_9_9950x3d_16_core.csv  intelr_xeonr_cpu_e3_1220_v3.csv  intelr_xeonr_cpu_e5_2683_v4.csv
benchmarks/data/cpu_comparison/dpdk6_ipv6_batch/: amd_epyc_7301_16_core.csv  intelr_xeonr_cpu_e3_1220_v3.csv  intelr_xeonr_cpu_x5650.csv  intelr_xeonr_gold_6426y.csv
benchmarks/data/cpu_comparison/dpdk6_ipv6_single/: amd_ryzen_9_9950x3d_16_core.csv  intelr_xeonr_cpu_e3_1220_v3.csv  intelr_xeonr_cpu_e5_2683_v4.csv  intelr_xeonr_gold_6426y.csv
bindings/cpp/: CMakeLists.txt  README.md
bindings/cpp/examples/: CMakeLists.txt  basic_example.cpp
bindings/cpp/include/: liblpm  liblpm.hpp
bindings/cpp/src/: lpm_impl.cpp
bindings/cpp/tests/: CMakeLists.txt  test_lpm.cpp
bindings/java/: .gitignore  CMakeLists.txt  README.md  build.gradle  gradlew  settings.gradle
bindings/java/examples/: AlgorithmSelectionExample.java  BasicExample.java  BatchLookupExample.java
bindings/lua/: CMakeLists.txt  Makefile  README.md  liblpm-2.0.0-1.rockspec
bindings/lua/examples/: basic_example.lua  batch_example.lua  ipv6_example.lua
bindings/lua/src/: liblpm.c  liblpm_utils.c
bindings/lua/tests/: test_lpm.lua
bindings/php/: .gitignore  CMakeLists.txt  LICENSE  README.md  config.h.in  config.m4  config.w32  liblpm.c  package.xml  php_liblpm.h
bindings/php/docs/: API.md
bindings/php/examples/: basic_example.php  batch_lookup.php  ipv6_example.php  procedural_example.php
bindings/php/tests/: algorithm_selection.phpt  batch_lookup.phpt  create_ipv4.phpt  create_ipv6.phpt  default_route.phpt  delete.phpt  error_handling.phpt  insert_lookup.phpt  ipv6_basic.phpt  longest_prefix.phpt  memory_cleanup.phpt  procedural_api.phpt
bindings/python/: .gitignore  CMakeLists.txt  IFUNC_WORKAROUND.md  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/benchmarks/: benchmark_batch.py  benchmark_single.py
bindings/python/examples/: algorithms.py  basic_example.py  batch_lookup.py  context_manager.py
bindings/python/src/liblpm/: __init__.py  (+7 more)
bindings/python/tests/: __init__.py  conftest.py  test_batch.py  test_ipv4.py  test_ipv6.py  test_memory.py
tests/: CMakeLists.txt  FUZZING.md  fuzz_advanced_multicore.sh  fuzz_multicore.sh  fuzz_setup.sh  test_basic.c  test_cppcheck.sh  test_fuzz.c  test_fuzz_advanced.c  test_lookup_all.c  valgrind.supp
(+238 files in other folders)
